<?xml version="1.0" encoding="UTF-8"?>

<package format="2">

  <name>JoyStick</name>
  <version>2.0.2</version>
  <description>The Joystick package for WEB UI joysticks</description>

  <maintainer email="had067@csiro.au">David Haddon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
